support latest istion 1.24.x
Signed-off-by: Gilbert Kwan <gkwan@ca.ibm.com>