@@ -12,6 +12,8 @@
 package io.openliberty.guides.inventory;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Properties;
 
@@ -68,7 +70,7 @@ public class InventoryResource {
     URL customURL = null;
     Properties props = null;
     try {
-        customURL = new URL(customURLString);
+        customURL = new URI(customURLString).toURL();
         SystemClient systemClient = RestClientBuilder.newBuilder()
                 .baseUrl(customURL)
                 .register(UnknownUrlExceptionMapper.class)
@@ -76,8 +78,11 @@ public class InventoryResource {
         // tag::getProperties[]
         props = systemClient.getProperties();
         // end::getProperties[]
+    } catch (URISyntaxException e) {
+        System.err.println("The given URL string is not formatted correctly: "
+                           + customURLString);
     } catch (MalformedURLException e) {
-        System.err.println("The given URL is not formatted correctly: "
+        System.err.println("The given URL string is not formatted correctly: "
                            + customURLString);
     }
 
@@ -115,4 +120,5 @@ public class InventoryResource {
   public void reset() {
       manager.reset();
   }
+
 }
